[package]
name = "flower"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

[dependencies]
bevy = { version = "0.15.0", features = ["wayland", "dynamic_linking"] }
bevy_common_assets = { version = "0.12.0", features = ["json"] }
bevy_http_client = "0.7.0"
bevy_simple_text_input = "0.10.1"
chrono = "0.4.39"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
